[package]
name = "zoker_poc"
build = "build.rs"
version = "0.2.0"
edition = "2021"
description = "Zoker for using zero-knowledge in blockchain"
authors = ["HyeockJin Kim <kherootz@gmail.com>"]
repository = "https://github.com/HyeockJinKim/zoker"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
assert_matches = "1.3.0"
lalrpop-util = "0.17.2"
num-bigint = "0.2"
regex = "1.3.4"
unic-ucd-ident  = "0.9.0"
hex = "0.4.2"
rust-crypto = "0.2.36"
rand = "0.8.2"
